--- a/index-template.html
+++ b/index-template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Roboto+Mono|Material+Icons' rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>my-app</title>
+    <title>Woodpecker</title>
   </head>
   <body>
     <div id="app"></div>
